--- a/Kaisar/index.html
+++ b/Kaisar/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 <script>
-window.open('https://www.eliraai.com/tasks?ref=f3284ab2', '_self');
+window.open('https://zero.kaisar.io/register?ref=ALqujx469', '_self');
 </script>
 </body>
 </html>
-
