--- a/Dropair/index.html
+++ b/Dropair/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script>
-window.open('https://dropair.io?ref=TGM9UC', '_self');
+window.open('https://dropair.io?ref=UL52JZ', '_self');
 </script>
 </body>
 </html>
